# templateSFML

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  lib.hpp
lib/Collision/: Collision.cpp  Collision.hpp  CollisionPrivate.cpp
src/: main.cpp
src/Game/: Game.cpp  Game.hpp
src/SFML/: SFML.hpp
